--- a/css/reset.css
+++ b/css/reset.css
@@ -67,6 +67,7 @@ a {
 fieldset {
   border: 0;
   margin: 0;
+  min-inline-size: 0;
   padding: 0;
 }
 
